      options \option{--m32} or \option{--m64} to select the
      architecture; set the appropriate macros in \file{MkRules.local}.

      It is the intention to move to such a toolchain when they become
      mature enough.

      \item Compilation now uses option \option{-mtune=core2}: this
      will improve performance a few percent on recent CPUs at the
      expense of those which are several years old. 
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \file{Rzlib.dll} (sometimes used in packages \emph{via}
      \samp{$(ZLIB_LIBS)}) does not include the buggy gzio   % for balance: $
      interface from zlib 1.2.5.
    }
  }
}
  
\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \command{R CMD build} no longer attempts to preserve file
      permissions on Windows, because Windows (unlike POSIX-compliant
      OSes) stops read-only files being deleted in version-control
      directories.
      
      \item \code{shell.exec()} now interprets files relative to the current
      working directory (rather than \samp{R_HOME}).

      \item \code{file.info()} now accepts \sQuote{file} names with
      trailing directory separators, even though such names are invalid
      on Windows.

      \item The \code{windows()} family of devices now supports()
      per-pixel alpha for raster images.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item Launching the PDF manuals from the Rgui menus did not work
      on some versions of Windows.
      
      \item The windows() screen device would sometimes fail to plot
      (visibly) points with \code{pch="."}. \PR{14583}
      
      \item \code{system()} and related functions sometimes failed
      when run in \file{Rgui}.

      \item Saving to PDF from the menu of a \code{windows()} device
      used defaults for \code{family}, \code{fg} and \code{bg} from
      \code{ps.options()} rather than \code{pdf.options()} (but