@@ -101,6 +101,13 @@ QPDF=
 # home of 32-bit files for combined installer on 64-bit build
 HOME32=
 
+# optimization flags
+# For 32-bit builds you may want to use -msse3 or remove -msse2
+EOPTS=-mtune=core2
+ifeq "$(WIN)" "32"
+EOPTS+=-msse2
+endif
+
 ## ====== configuration macros for building MSI installer ===========
 
 # location where WiX 3.x executables were installed. Spaces allowed.
