@@ -23,6 +23,7 @@ fixetc: $(wildcard ./etc/*)
 ifeq "$(WIN)" "64"
 	$(SED) -e 's/WIN = 32/WIN = 64/' \
 	  -e "s/-O3/-O2/" \
+	  -e "s/@EOPTS@/$(EOPTS)/" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
@@ -35,6 +36,7 @@ ifeq "$(WIN)" "64"
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 else
 	$(SED) -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
+	  -e "s/@EOPTS@/$(EOPTS)/" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
